# SpurHacks

./: .env  .env.example  .gitignore  DOCKER_SETUP.md  README.md  START_HERE.md  integration_report.md  package-lock.json  package.json  quick_recreate.py  recreate_database.py  requirements.txt  run_backend.py  run_docker.py  run_frontend.py  test_integration.py
.cursor/rules/: project-context.mdc
.devcontainer/: devcontainer.json
backend/: .gitkeep  Dockerfile  __init__.py  dev_config.py  dev_config_fixed.py  dev_main.py  dev_simple.py  main.py  pyproject.toml  requirements.txt  run_dev.py
backend/api/: __init__.py  files.py  sessions.py
backend/auth/: __init__.py  dev_auth.py  manager.py
backend/core/: __init__.py  cache.py  database.py  ratelimit.py
backend/models/: __init__.py  node.py  session.py  types.py  user.py
backend/services/: __init__.py  ai_internal.py  qa_loop.py  storage.py
backend/tests/: __init__.py  auth_test.py  test_ai_internal.py  test_auth_comprehensive.py  test_file_uploads.py  test_iterative_qa.py  test_models_session_node.py  test_rate_limit.py  test_sessions.py
frontend/: .env.production  .eslintrc.cjs  .gitkeep  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  store.ts  vite-env.d.ts
frontend/src/api/: sessions.ts
frontend/src/components/: SessionCreate.tsx  SessionDetail.tsx  SessionsList.tsx
frontend/src/hooks/: redux.ts  use-toast.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  NewSession.tsx  SignUpPage.tsx  Splash.tsx
frontend/src/providers/: ThemeProvider.tsx
frontend/src/routes/: ProtectedRoute.tsx  index.tsx
frontend/src/services/: api.ts
infra/: docker-compose.dev.yml  docker-compose.yml
tests/: test_iterative_qa.py
(+5 files in other folders)
